src/client/components/global.scss
/* ... */
// log
.log {
  padding: 5px;
  width: 30vw;
  min-width: 300px;
  background-color: rgba(51, 51, 51, 0.6);
}

.log-text {
  overflow-y: auto;
  max-height: 40vh;
  font-size: 0.8rem;
  padding-left: 17px;
}

.log-title {
  display: flex;
  justify-content: space-between;
}

.collapse-button {
  padding: 0px;
  border: none;
  width: 32px;
  height: 32px;
  border-radius: 32px;
  line-height: 32px;
  background-color: #fff;
  cursor: pointer;
  &:hover {
    background-color: #ccc;
  }
}

.collapsible-header {
  padding: 0.5rem 0;
  display: flex;
  justify-content: space-between;
}

.bottom-floats-wrapper {
  // Set the height to 0, so that it does not (invisibly) overlap the map.
  // Without explicitly setting the height to 0, the following problem arises:
  // Open the chat, but close the log. Now it is impossible to interact with the
  // map to the right of the chat.
  height: auto;

  position: absolute;
  bottom: 0px;
  right: 0px;
  width: 100%;

  display: flex;
  flex-direction: column;

  .bottom-floats-upper {
    display: flex;
    justify-content: flex-end;
    align-items: flex-end;
    padding: 0 4px;

    & > * {
      margin-left: 8px;
    }
  }
}

.dice-template-opener {
  padding: 0.5rem;
  background-color: rgba(51, 51, 51, 0.6);
  cursor: pointer;
}

$dice-templates-height: 200px;
.dice-template-roll-hints {
  $width: 200px;
  bottom: $dice-templates-height + 70px;
  position: fixed;
  left: 50%;
  width: $width;
  margin-left: $width / -2;
  color: #fff;

  button {
    display: block;
    margin: auto;
  }
}

.dice-templates {
  $panel-background: rgb(59, 28, 6);
  $animation-duration: 200ms;

  height: 0;
  background: $panel-background;
  box-shadow: inset 0 0 30px black;
  border-top: 1px solid black;
  border-left: 1px solid black;
  width: 100%;
  transition: $animation-duration height;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  padding-left: 8px;
  position: relative;
  user-select: none;

  &.opened {
    height: $dice-templates-height;
  }

  .dice-templates-container {
    overflow-y: auto;
    display: flex;
    flex-wrap: wrap;
    height: 100%;
    width: 100%;
    align-items: flex-start;
    justify-content: flex-start;
  }

  .dice-template-outer {
    flex-grow: 0;
  }

  .dice-template {
    min-height: 60px;
    max-width: 140px;
    border: 1px solid rgba(255, 255, 255, 0.3);
    margin: 0.2rem;
    position: relative;
    padding: 0.1rem;
    display: flex;
    flex-wrap: wrap;
    flex-grow: 0;
    cursor: pointer;
    align-items: center;
    background: $panel-background;

    &.selected {
      border: 1px solid white;
      background: adjust-color($color: $panel-background, $lightness: 9%);
    }

    .dice-template-selection-count {
      $size: 16px;
      position: absolute;
      left: $size / -2;
      top: $size / -2;
      height: $size;
      width: $size;
      background: #fff;
      color: #000;
      border-radius: $size;
      display: flex;
      align-items: center;
      justify-content: center;
      font-size: 0.8rem;
      font-weight: bold;
    }

    input {
      background: none;
      border: none;
      box-shadow: none;
      width: 100%;
      color: #fff;
      font-size: 0.8rem;
    }

    textarea {
      width: 100%;
    }
  }

  $dice-picker-height: 400px;
  .dice-picker {
    position: absolute;
    left: 12px;
    width: 270px;
    height: 0;
    transition: $animation-duration $animation-duration;
    top: 0;
    background: #333;
    border-radius: 5px 5px 0 0;
    overflow-y: auto;
    display: flex;
    flex-wrap: wrap;
    align-items: flex-start;
    justify-content: flex-start;
    align-content: flex-start;
    padding: 0.5rem;
  }

  &.opened .dice-picker {
    height: $dice-picker-height;
    top: -$dice-picker-height;
  }

  .dice-option {
    $size: 30px;
    width: $size;
    height: $size;
    font-size: 0.7rem;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 5px;
    background: #000;
    margin: 0.1rem;
    flex-direction: column;
    line-height: 1;
    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3);
  }

  .dice-option-linked-modifier-name {
    font-size: 0.7em;
  }

  button {
    padding: 0 2px;
    min-height: 0;
    font-size: 0.7rem;
    margin: 0 2px;
  }

  .nested-template {
    width: 100px;
  }

  hr.solid {
    border-top: 1px solid #333;
    position: relative;
    width: 100%;
  }
}

// This is just the CSS for the unopened collapsed chat wrapper.
// The rest of the CSS is located in PrivateChats.scss and only loaded if the
// chat is opened.
.private-chats-wrapper {
  background-color: #333;
  min-width: 200px;
  max-width: 400px;

  .collapsible-header {
    padding: 4px 8px 0;

    small {
      font-size: 0.8rem;
      text-transform: uppercase;
      color: orange;
    }
  }
}

$gmAreaColor: #ab62c0;

.gm-area {
  border: 1px solid $gmAreaColor;
  padding: 4px;
  padding-top: 10px;
  margin-top: 10px;
  position: relative;
  background-color: inherit;

  &::before {
    position: absolute;
    color: $gmAreaColor;
    content: "GM only";
    font-size: 12px;
    text-transform: uppercase;
    top: -9px;
    left: 4px;
    padding: 0 3px;
    background-color: #222;
  }
}

.gm-button {
  background: $gmAreaColor;
  color: white;
}
/* ... */

